--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,9 +1,18 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+    <title>Organizations</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
 
+<p id="notice"><%= notice %></p>
+<div class="container mt-3 p-5 my-5">
 <h1>Listing Organizations</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="table-secondary">
     <tr>
       <th>Name</th>
       <th>Address</th>
