--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -9,7 +9,7 @@
 
 <p id="notice"><%= notice %></p>
 <div class="container mt-3 p-5 my-5">
-<h1>Listing Organizations</h1>
+<h1>Listing Organizations THIS IS CRAZY TEST</h1>
 
 <table class="table">
   <thead class="table-secondary">
