--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -15,7 +15,8 @@
   <thead class="table-secondary">
     <tr>
       <th>Name</th>
-      <th>Address</th>
+      <th>Organization Type</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
     <% @organizations.each do |organization| %>
       <tr>
         <td><%= organization.name %></td>
+        <td><%= organization.category %></td> 
 
         <td><%= link_to 'Show', organization %></td>
         <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
