--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,5 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+  <head>
+    <title>Organization Info</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+
+<div class="container p-5 my-5 bg-light text-dark">
 <p>
   <strong>Name:</strong>
   <%= @organization.name %>
@@ -32,3 +40,4 @@
 
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
+  </div>
