--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -19,6 +19,11 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
+  <div class="field">
+    <%= f.label :web_address %><br>
+    <%= f.text_field :web_address %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
