--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Organization</h1>
+  <head>
+    <title>Edit Organization</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
 
+<div class="container p-5 my-5 bg-light text-dark">
+<h1>Editing Organization</h1>
 <%= render 'form' %>
 
 <%= link_to 'Show', @organization %> |
 <%= link_to 'Back', organizations_path %>
+</div>
