--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,8 +18,8 @@
   
   <h1 class="text-center">Welcome to Volunteer Connect</h1>
   <div class="text-center">
-    <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/events" role="button">Find an Event</a>
-    <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/organizations" role="button">Browse Organizations</a>
+    <a class="btn btn-primary p-3 mr-5" href="https://arcane-caverns-98402.herokuapp.com/events" role="button">Find an Event</a>
+    <a class="btn btn-primary p-3 mr-5" href="https://arcane-caverns-98402.herokuapp.com/organizations" role="button">Browse Organizations</a>
   </div>
   
   
