--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="https://spark-small-3000.codio.io/home/index">Home</a>
-      <a class="nav-item nav-link" href="https://spark-small-3000.codio.io/organizations">Organizations</a>
-      <a class="nav-item nav-link" href="https://spark-small-3000.codio.io/events">Events</a>
+      <a class="nav-item nav-link active" href="https://arcane-caverns-98402.herokuapp.com/">Home</a>
+      <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/organizations">Organizations</a>
+      <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/events">Events</a>
     </div>
   </div>
 </nav>
