--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Events</h1>
+<div class="container mt-3 p-5 my-5">
+<h1>Events</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="table-secondary">
     <tr>
       <th>Name</th>
       <th>Date</th>
@@ -31,3 +32,4 @@
 <br>
 
 <%= link_to 'New Event', new_event_path %>
+</div>
