added user table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 <body>
   
 
-<center class = "container p-5">
+<center class = "container">
   <img src="https://channel-simon.codio.io/vc2/app/views/home/vc.png" class = "aligncenter">
 </center>
 
