Added Login option to home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 <body>
-  
+
+<h3>Or Login with Google:</h3>
+<%= button_to 'Google', '/auth/google_oauth2' %>
 
 <center class = "container">
   <img src="https://channel-simon.codio.io/vc2/app/views/home/vc.png" class = "aligncenter">
