--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <a class="nav-item nav-link active" href="https://arcane-caverns-98402.herokuapp.com/">Home</a>
       <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/organizations">Organizations</a>
       <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/events">Events</a>
-      <ul class="nav navbar-nav navbar-right">
+<!--       <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -32,7 +32,8 @@
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
+      <a class="nav-item"><%= link_to "Sign up", new_user_registration_path %></a> 
     </div>
   </div>
 </nav>
