--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
             </ul>
           </li>
         </ul> -->
-      <a class="nav-item"><%= link_to "Sign up", new_user_registration_path %></a> 
+      <a class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></a>
+      <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
+      <a class="nav-item"><%= link_to "Edit profile", edit_user_registration_path %></a>
     </div>
   </div>
 </nav>
