--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <a class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></a>
       <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
       <a class="nav-item"><%= link_to "Edit profile", edit_user_registration_path %></a>
-      <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
+      <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, :method=>'delete' %></a>
     </div>
   </div>
 </nav>
