--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 <%= button_to 'Google', '/auth/google_oauth2' %>
 
 <center class = "container">
-  <img src="/app/views/home/vc.png" class = "aligncenter">
+  <img src="test.jfif" class = "aligncenter" alt = "Homepage Logo">
 </center>
 
 <div class="container p-5 my-5 bg-light text-dark">
