--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
     <meta charset = "utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    
   </head>
 <body>
 
@@ -13,7 +14,7 @@
 <%= button_to 'Google', '/auth/google_oauth2' %>
 
 <center class = "container">
-  <img src="test.jfif" class = "aligncenter" alt = "Homepage Logo">
+  <img src = 'vc.png' class = "aligncenter" alt = "Homepage Logo">
 </center>
 
 <div class="container p-5 my-5 bg-light text-dark">
