--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-      
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/fontawesome-all.min.js"></script>
-<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+    <base href="https://arcane-caverns-98402.herokuapp.com/" target="_blank">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/fontawesome-all.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"></a>
@@ -19,9 +19,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="https://arcane-caverns-98402.herokuapp.com/">Home</a>
-      <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/organizations">Organizations</a>
-      <a class="nav-item nav-link" href="https://arcane-caverns-98402.herokuapp.com/events">Events</a>
+      <a class="nav-item nav-link active" href="">Home</a>
+      <a class="nav-item nav-link" href="organizations">Organizations</a>
+      <a class="nav-item nav-link" href="events">Events</a>
       <a class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></a>
       <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
       <a class="nav-item"><%= link_to "Edit profile", edit_user_registration_path %></a>
