--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <base href="https://arcane-caverns-98402.herokuapp.com/" target="_blank">
+    <base href="https://arcane-caverns-98402.herokuapp.com/">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/fontawesome-all.min.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
