--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 <%= button_to 'Google', '/auth/google_oauth2' %>
 
 <center class = "container">
-  <img src = 'vc.png' class = "aligncenter" alt = "Homepage Logo">
+  <img src = 'vc2/app/views/home/vc.png' class = "aligncenter" alt = "Homepage Logo">
 </center>
 
 <div class="container p-5 my-5 bg-light text-dark">
