--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,20 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <base href="https://arcane-caverns-98402.herokuapp.com/">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/fontawesome-all.min.js"></script>
+    <style>
+        a:link { text-decoration: none; }
+
+
+        a:visited { text-decoration: none; }
+
+
+        a:hover { text-decoration: none; }
+
+
+        a:active { text-decoration: none; }
+    </style>
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -19,13 +30,33 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="">Home</a>
-      <a class="nav-item nav-link" href="organizations">Organizations</a>
-      <a class="nav-item nav-link" href="events">Events</a>
-      <a class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></a>
-      <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
-      <a class="nav-item"><%= link_to "Edit profile", edit_user_registration_path %></a>
-      <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
+      <button type="button" class="btn">
+          <li id = home_button class = "nav-item"><%= link_to 'Home', home_url %></li>
+      </button>
+        
+      <button type="button" class="btn">
+          <td class = "nav-item"><%= link_to 'Organizations', organizations_url %></td>
+      </button>
+        
+      <button type="button" class="btn">
+          <td class = "nav-item"><%= link_to 'Events', events_url %></td>
+      </button>
+        
+      <button type="button" class="btn">
+          <td class="nav-item"><%= link_to "Sign Up", new_user_registration_path %></td>
+      </button>
+        
+      <button type="button" class="btn">
+          <a class="nav-item"><%= link_to "Login", new_user_session_path %></a>
+      </button>
+        
+      <button type="button" class="btn">
+          <a class="nav-item"><%= link_to "Profile", edit_user_registration_path %></a>
+      </button>
+        
+      <button type="button" class="btn">
+          <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
+      </button>  
     </div>
   </div>
 </nav>
