Fixed seeds (no validator)

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,5 +20,10 @@
   <%= @event.end_time %>
 </p>
 
+<p>
+  <strong>Link:</strong>
+  <%= @event.link %>
+</p>
+
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
