--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+#footer {
+position: absolute;
+width: 100%;
+height: 60px;
+bottom:0;
+background-color: #f5f5f5;
+}
