--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@event) do |f| %>
+<%= form_for(@event) do |form| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -11,23 +11,68 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :name %>
+      <font color ="red">*</font>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.text_field :date %>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :description %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_area :description, :size => "30x5" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :start_time %><br>
-    <%= f.text_field :start_time %>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :date %>
+    </div>
+    <div class="col-sm-10">
+      <%=form.date_field :date %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :end_time %><br>
-    <%= f.text_field :end_time %>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :start_time %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.time_field :start_time %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :end_time %>
+
+    </div>
+    <div class="col-sm-10">
+      <%= form.time_field :end_time %>
+    </div>
+  </div>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :link %>
+      <font color ="red">*</font>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :link %>
+    </div>
+  </div>
+
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      
+      <%= form.submit %>
+    </div>
+
   </div>
 <% end %>
