--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
   <div>
     
   </div>
-  <div class="footer ">
+  <div id="footer ">
   <!-- Grid container -->
   <div class="container-fluid p-4 bg-light">
   <div class = "container">
