--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <html lang = "en">
   
   <head>
-    <title>Volunteer Home Test</title>
+    <title>Volunteer Home</title>
     <meta charset = "utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -11,7 +11,7 @@
 <body>
 
 <center class = "container">
-  <img src = 'https://channel-simon.codio.io/vc2/app/views/home/vc.png' class = "aligncenter" alt = "Homepage Logo">
+  <img src = "vc.png" class = "aligncenter" alt = "Homepage Logo">
 
 </center>
 
@@ -28,8 +28,11 @@
           <td class = "nav-item"><%= link_to 'Events', events_url %></td>
       </button>
   </div>
-  
+
   
 </div>
+<div class="container" style="min-height:100vh">
+    </div>
+  
 </body>
 </html>
