--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,15 @@
         a:active { text-decoration: none; }
     </style>
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
+<!--     <style>
+        #footer {
+       position:absolute;
+       bottom:0;
+       width:100%;
+       height:60px;   /* Height of the footer */
+       background:#6cf;
+    }
+      </style> -->
   </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"></a>
@@ -63,11 +72,11 @@
   
   <body>
     <%= yield %>
-  </body>
+  
   <div>
     
   </div>
-  <div id="footer ">
+  <footer class="mt-auto">
   <!-- Grid container -->
   <div class="container-fluid p-4 bg-light">
   <div class = "container">
@@ -86,6 +95,7 @@
   </div>
   <!-- Grid container -->
 
-</div>
+</footer>
+</body>
   
 </html>
