--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container p-5 my-5 bg-light text-dark">
 <h1>New Event</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', events_path %>
+</div>
