--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container p-5 my-5 bg-light text-dark">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -27,3 +28,4 @@
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+</div>
