Bootstrapped all organization pages

--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container p-5 my-5 bg-light text-dark">
 <h1>New Organization</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', organizations_path %>
+</div>
