Bootstrapped form buttons for orgs and events

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -71,7 +71,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       
-      <%= form.submit %>
+      <%= form.submit class: "btn btn-lg btn-primary" %>
     </div>
 
   </div>
