--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -73,7 +73,7 @@
 </div>
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
-      <%= f.submit %>
+      <%= f.submit class: "btn btn-lg btn-primary"%>
     </div>
   </div>
 <% end %>
