Fixed homepage logo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
 <body>
 
 <center class = "container p-5">
-  <img src = "vc.png" class = "aligncenter" alt = "Homepage Logo">
+  <img src = "https://lh3.googleusercontent.com/DHgH5C9YJ3iftKnL0mEWYr2qx3IU-nOlR4r304bdMxNMU1jlRZco3QdcuTznjBAlFhGRi-HyvD03fF5FAhBIOafzHEkAAPpVhMG46EyIBdGl-QMajlaROUmQI4s6hkXRKclUKWBkTi2otQQvovBoHbsiCZmcSQC5OvfqJ_9PqKLFkIbuM7d0x-ahM5SBiooxl5ao8XXtNhy8s9r4O3pa9Ob1BSlSNT_daWJv8Iz9VG_T_oh9Yfa62FTQduO9NENwYFa7tHRX_kStOqMUVW8X-1FFhho4h7XIL4b_3DrREUuCNO7VjCeJgnC2MxtePn0vPXJAxB78IxS2fF9Gi-ldMpCoR_paXTQyMR0-Bb5E6zsXRid6tAxS2XA_SOFNDOiKIr9HJI7ClSbkcYKbyy1cFKIDrONKilpjlRz_WTOBshTdX7qZzMsDDu-9LP-FN-saKLcqoXNfl3I9IyrwXATYEyKvy26vtgJJDCh0kxGGe6riwVvw3lD31XqvKIVmtuCN436KyTcxLuQknsg95k8-_Zc9FmadySUR21cjeaHejTArMNrS46eQY3ehG5V3Cq3hhO0egpS-ejdLR-7kMe4a2pMVYd9XAW1J13Pt_AJA3IUg537BXSitCewxxo6lHSNDHoHEdYsXUrdYx6Kl54stk78TVVdA8dfbSIUw3RaHoqrgLBi-rtvqxRUiMxOC2kR5ARQpkPWSlWiiRUtCfbsF7QrX=w258-h174-no?authuser=0" class = "aligncenter" alt = "Homepage Logo">
 
 </center>
 
