--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-    <title>Organizations</title>
-    <meta charset = "utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
+    <title>Events</title>    
+    </head>
 
 <p id="notice"><%= notice %></p>
 
@@ -30,9 +27,9 @@
         <td><%= event.date %></td>
         <td><%= event.start_time %></td>
         <td><%= event.end_time %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Show', event, class:"btn btn-secondary btn-sm" %></td>
+        <td><%= button_to 'Edit', edit_event_path(event), class:"btn btn-secondary btn-sm" %></td>
+        <td><%= button_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
