add buttons to organizations and banners for alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,9 @@
 </nav>
   
   <body>
+    <% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+    <% end %>
     <%= yield %>
   </body>
   <div>
