--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -4,7 +4,7 @@
     <title>Organizations</title>
   </head>
 
-<p id="notice"><%= notice %></p>
+
 <div class="container mt-3 p-5 my-5">
 <h1>Organizations</h1>
 
@@ -24,9 +24,9 @@
         <td><%= organization.name %></td>
         <td><%= organization.category %></td> 
 
-        <td><%= link_to 'Show', organization %></td>
-        <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
-        <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Show', organization, class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= button_to 'Edit', edit_organization_path(organization), class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= button_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm"  %></td>
       </tr>
     <% end %>
   </tbody>
