--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,8 +27,8 @@
         <td><%= event.date %></td>
         <td><%= event.start_time %></td>
         <td><%= event.end_time %></td>
-        <td><%= button_to 'Show', event, class:"btn btn-secondary btn-sm" %></td>
-        <td><%= button_to 'Edit', edit_event_path(event), class:"btn btn-secondary btn-sm" %></td>
+        <td><%= link_to 'Show', event, class:"btn btn-secondary btn-sm" %></td>
+        <td><%= link_to 'Edit', edit_event_path(event), class:"btn btn-secondary btn-sm" %></td>
         <td><%= button_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm" %></td>
       </tr>
     <% end %>
