--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -24,8 +24,8 @@
         <td><%= organization.name %></td>
         <td><%= organization.category %></td> 
 
-        <td><%= button_to 'Show', organization, class:"btn btn-secondary btn-sm"  %></td>
-        <td><%= button_to 'Edit', edit_organization_path(organization), class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= link_to 'Show', organization, class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= link_to 'Edit', edit_organization_path(organization), class:"btn btn-secondary btn-sm"  %></td>
         <td><%= button_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm"  %></td>
       </tr>
     <% end %>
