--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -34,6 +34,6 @@
 
 <br>
 
-<%= link_to 'New Organization', new_organization_path %>
+<%= link_to 'New Organization', new_organization_path, class:"btn btn-secondary btn-sm" %>
     
 </div>
