--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -37,5 +37,5 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path, class:"btn btn-secondary btn-sm" %>
+<%= link_to 'New Event', new_event_path, class:"btn btn-secondary" %>
 </div>
