Updated show view to include orgs

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,6 +20,11 @@
   <strong>End time:</strong>
   <%= @event.end_time %>
 </p>
+    
+<p>
+  <strong>Organization:</strong>
+  <%= @event.organization %>
+</p>
 
 <p>
   <strong>Link:</strong>
