--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -15,64 +15,64 @@
 
   <div class="field row my-2 pt-2" >
       
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.label :name %>
       <font color ="red">*</font>
     </div>
       
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :name %>
     </div>
       
   </div>
 
   <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.label :address %>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :address %>
     </div>
    </div>
 
   <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.label :web_address %>
       <font color ="red">*</font>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :web_address %>
     </div>
    </div>  
       
   <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
-      <%= f.label :contact_phone , "(XXX-XXX-XXXX)"%>
+    <div class="col-sm-4">
+      <%= f.label "Contact phone (XXX - XXX - XXXX)" %>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :contact_phone %>
     </div>
   
 </div>
   <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.label :contact_email %>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.text_field :contact_email %>
     </div>
 </div> 
     <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.label :category %>
       <font color ="red">*</font>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-8">
       <%= f.select :category, ['Food', 'Advocacy', 'Garden', 'Education', 'Build', 'Relief', 'Health', 'Rescue', 'Other'] %>
     </div>
 </div>
   <div class="field row my-2 pt-2" >
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <%= f.submit class: "btn btn-lg btn-primary"%>
     </div>
   </div>
