--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
+<html lang = "en">
+    <head>
+    <title>Profile</title>    
+    </head>
+
 <div class="container p-5 my-5 bg-light text-dark">
-<%= @user.email %>
+    <h1>Volunteer Profile</h1>
+    
+    <p>
+        <strong>Primary Email:</strong>
+        <%= @user.email %>
+    </p>
 </div>
