--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,9 @@
           <td class = "nav-item"><%= link_to 'Events', events_url %></td>
       </button>
   </div>
+    <button type="button" class="btn btn-primary">
+    <%= link_to 'Test', users_show_path%>
+    </button>
 
   
 </div>
