Routed with navbar, added edit ability

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
       </button>
         
       <button type="button" class="btn">
-          <a class="nav-item"><%= link_to "Profile", edit_user_registration_path %></a>
+          <a class="nav-item"><%= link_to "Profile", users_show_path %></a>
       </button>
         
       <button type="button" class="btn">
