--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,8 @@
         <strong>Primary Email:</strong>
         <%= @user.email %>
     </p>
+    
+    <button type="button" class="btn btn-primary">
+          <a class="nav-item"><%= link_to "Edit Information", edit_user_registration_path %></a>
+    </button>
 </div>
