--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,12 @@
       <button type="button" class="btn">
           <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
       </button>
+       
+        
+       <% if signed_in? %> 
+        <%= "Hello #{current_user.email}" %>
+        <% end %>
+      
         
         
 
