--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,10 +56,23 @@
         
       <button type="button" class="btn">
           <a class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></a>
-      </button>  
+      </button>
+      <!-- <form class='form-inline my-2 my-lg-0'>
+          <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
     </div>
   </div>
 </nav>
+
+<%= form_tag(search_path, :method => "get") do %>
+    <div class="input-group">
+        <%= search_field_tag :search, params[:search], placeholder: "Type", class: "form-control"%>
+        <div class="input-group-btn">
+            <%= button_tag "Search", :class => 'btn btn-into glyphicon glyphicon-search', :name => nil%>
+        </div>
+    </div>
+<% end %>
   
   <body>
     <% if notice %>
