--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,10 +12,10 @@
 <table class="table">
   <thead class="table-secondary">
     <tr>
-      <th>Name</th>
-      <th>Date</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th><%= link_to "Name", :sort => "name"%></th>
+      <th><%= link_to "Date", :sort => "date"%></th>
+      <th><%= link_to "Start time", :sort => "start_time"%></th>
+      <th><%= link_to "End time", :sort => "end_time"%></th>
       <th colspan="3"></th>
     </tr>
   </thead>
