--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -11,8 +11,8 @@
 <table class="table">
   <thead class="table-secondary">
     <tr>
-      <th>Name</th>
-      <th>Organization Type</th>
+      <th><%= link_to "Name", :sort => "name"%></th>
+      <th><%= link_to "Organization Type", :sort => "category"%></th>
       
       <th colspan="3"></th>
     </tr>
