--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,9 +66,9 @@
 </nav>
 
 <%= form_tag(search_path, :method => "get") do %>
-    <div class="input-group">
-        <%= search_field_tag :search, params[:search], placeholder: "Type", class: "form-control"%>
-        <div class="input-group-btn">
+    <div class="input-group my-2 my-lg-0">
+        <%= search_field_tag :search, params[:search], placeholder: "Search For Organizations or Events", class: "form-control my-2 my-lg-0"%>
+        <div class="input-group-btn-outline-success my-2 my-sm-0"">
             <%= button_tag "Search", :class => 'btn btn-into glyphicon glyphicon-search', :name => nil%>
         </div>
     </div>
