--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
 <%= form_tag(search_path, :method => "get") do %>
     <div class="input-group my-2 my-lg-0">
         <%= search_field_tag :search, params[:search], placeholder: "Search For Organizations or Events", class: "form-control my-2 my-lg-0"%>
-        <div class="input-group-btn-outline-success my-2 my-sm-0"">
+        <div class="input-group-btn-outline-success my-2 my-sm-0">
             <%= button_tag "Search", :class => 'btn btn-into glyphicon glyphicon-search', :name => nil%>
         </div>
     </div>
@@ -88,6 +88,9 @@
   <body>
     <% if notice %>
     <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+    <p class = "alert alert-danger"><%= alert %></p>
     <% end %>
     <%= yield %>
   </body>
