--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 <body>
 
 <center class = "container p-5">
-  <img src = "/vc2/app/views/home/vc.png" class = "aligncenter" alt = "Homepage Logo">
+  <img src = "https://i.ibb.co/WcrXHHZ/Website-Logo.png" class = "aligncenter" alt = "Homepage Logo">
 
 </center>
 
