--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,9 @@
   </head>
 <body>
 
+
 <center class = "container p-5">
-  <img src = "https://i.ibb.co/WcrXHHZ/Website-Logo.png" class = "aligncenter" alt = "Homepage Logo">
+    <%= image_tag "vc.png", alt: "Homepage logo with two smiling faces" =%>
 
 </center>
 
