--- a/app/views/organizations/search.erb
+++ b/app/views/organizations/search.erb
@@ -1,13 +1,51 @@
+<div class = "container p-5">
+    
 <h3>Search Results of Organizations:</h3>
+<table class="table">
+  <thead class="table-secondary">
+    <tr>
+      <th><%= link_to "Name", :sort => "name"%></th>
+      <th><%= link_to "Organization Type", :sort => "category"%></th>
+      
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<% @matchOrganizations.each do |organization|%>
-    <%= link_to organization.name, organization_path(organization.id) %> <br>
-<% end %>
+  <tbody>
+    <% @matchOrganizations.each do |organization| %>
+      <tr>
+        <td><%= link_to "#{organization.name}", "#{organization.web_address}",:target => '_blank', style: 'color:#0080ff;', class: 'css_class' %></td>
+        <td><%= organization.category %></td> 
+        <td><%= link_to 'More Details', organization, class:"btn btn-secondary btn-sm"  %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<hr>
 <h3>Search Results of Events:</h3>
-<% @matchEvents.each do |event|%>
-    <%= link_to event.name, event_path(event.id) %> <br>
-<% end%>
+<table class="table">
+  <thead class="table-secondary">
+    <tr>
+      <th><%= link_to "Name", :sort => "name"%></th>
+      <th><%= link_to "Date", :sort => "date"%></th>
+      <th><%= link_to "Start time", :sort => "start_time"%></th>
+      <th><%= link_to "End time", :sort => "end_time"%></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
+  <tbody>
 
+    <% @matchEvents.each do |event| %>
+      <tr>
+        <td><%= link_to "#{event.name}", "#{event.link}", :target => '_blank', style: 'color:#0080ff;', class: 'css_class'  %></td>
+        <td><%= event.date %></td>
+        <td><%= event.start_time %></td>
+        <td><%= event.end_time %></td>
+        <td><%= link_to 'Show', event, class:"btn btn-secondary btn-sm" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+</div>
