small language change

--- a/app/views/organizations/search.erb
+++ b/app/views/organizations/search.erb
@@ -42,7 +42,7 @@
         <td><%= event.date %></td>
         <td><%= event.start_time %></td>
         <td><%= event.end_time %></td>
-        <td><%= link_to 'Show', event, class:"btn btn-secondary btn-sm" %></td>
+        <td><%= link_to 'More Details', event, class:"btn btn-secondary btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
