--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <%= favicon_link_tag asset_path('vc.png') %>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/fontawesome-all.min.js"></script>
     <style>
