--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,3 +15,18 @@
           <a class="nav-item"><%= link_to "Edit Information", edit_user_registration_path %></a>
     </button>
 </div>
+    
+<div class="container mt-3 p-5 my-5">
+    <h1>Registered Events</h1>
+    
+    <% @user.events.each do |event| %>
+    <div class="card" style="width:400px">
+      <%= image_tag "vc.png", alt: "Homepage logo with two smiling faces" =%>
+      <div class="card-body">
+        <h4 class="card-title"> <%= event.name %> </h4>
+        <p class="card-text">Some example text.</p>
+      </div>
+    </div>
+    <% end %>
+    
+</div>
