--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,8 +65,10 @@
       
        
         
-       <% if signed_in? %> 
-        <%= "Hello #{current_user.email}" %>
+       <% if signed_in? %>
+        <button type="button" class="btn">
+          <a class="text-primary"><%= link_to "Hello, #{current_user.email}", users_show_path %></a>
+      </button>
         <% end %>
       
         
