--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,11 +30,11 @@
       </div>
     </div>
     <div class="actions">
-      <%= f.submit "Update", class: "btn btn-primary" %>
+      <%= f.submit "Update", class: "btn btn-primary mt-3" %>
     </div>
   <% end %>
-<h3>Cancel my account</h3>
 
+<br>
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
 
 <%= link_to "Back", :back, class: "btn btn-default" %>
