--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -5,11 +5,7 @@
   </head>
 
 <div class="container p-5 my-5 bg-light text-dark">
-<p>
-  <strong>Name:</strong>
-  <%= @organization.name %>
-</p>
-
+<h1><%= @organization.name %></h1>
 <p>
   <strong>Address:</strong>
   <%= @organization.address %>
