--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang = "en">
+    
+<style>
+    body {
+        background-color: #02b300 }
+    button:hover {
+      background-color: blue; 
+      color: white; !important
+    }
+</style>
   
   <head>
     <title>Volunteer Home</title>  
@@ -24,11 +33,13 @@
           <td class = "nav-item"><%= link_to 'Events', events_url %></td>
       </button>
   </div>
-
+    
   
 </div>
 <div class="container" style="min-height:100vh">
     </div>
+
+
   
 </body>
 </html>
