--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
 
         a:active { text-decoration: none; }
     </style>
+      
+ <style type="text/css">
+</style>
+      
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -80,7 +84,8 @@
     <div class="input-group my-2 my-lg-0">
         <%= search_field_tag :search, params[:search], placeholder: "Search For Organizations or Events", class: "form-control my-2 my-lg-0"%>
         <div class="input-group-btn-outline-success my-2 my-sm-0">
-            <%= button_tag "Search", :class => 'btn btn-into glyphicon glyphicon-search', :name => nil%>
+            
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </div>
     </div>
 <% end %>
