--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -21,19 +21,36 @@
   <tbody>
     <% @organizations.each do |organization| %>
       <tr>
-        <td><%= link_to "#{organization.name}", "#{organization.web_address}",:target => '_blank', style: 'color:#0080ff;', class: 'css_class' %></td>
+        <td><%= link_to "#{organization.name}", "#{organization.web_address}",:target => '_blank', style: 'color:rgb(0,0,0);', class: 'css_class' %></td>
         <td><%= organization.category %></td> 
 
         <td><%= link_to 'Show', organization, class:"btn btn-secondary btn-sm"  %></td>
-        <td><%= link_to 'Edit', edit_organization_path(organization), class:"btn btn-secondary btn-sm"  %></td>
-        <td><%= button_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= link_to image_tag("icons8-pencil-24.png", size:"20"), edit_organization_path(organization), class:"btn btn-secondary btn-sm"  %></td>
+        <td><%= button_to 'Delete', organization, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-secondary btn-sm"  %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+    
+<style>
+    tr {
+    background-color:#02b300;
+    color:white; }
+    
+  .button {
+  background-color: lightblue; 
+  border: solid black;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+</style>
+    
 <br>
 
-<%= link_to 'New Organization', new_organization_path, class:"btn btn-secondary" %>
+<%= link_to 'New Organization', new_organization_path, class:"button" %>
     
 </div>
