--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,18 @@
 
 
 <div class="container mt-3 p-1 my-5">
-<h1>Events</h1>
+
+    <div class = "container pb-5">
+        <div class="row">
+        <div class="col">
+            <h1>Events</h1>
+            </div>    
+        <div class="col">
+            <%= link_to 'New Event', new_event_path, class:"btn btn-secondary float-end ml-auto" %>
+            </div>
+        
+        </div>
+    </div> 
     
     <% @events.each do |event| %>
        <div class="card mb-3" style="max-width: 1500px;">
@@ -35,18 +46,17 @@
             <p><%= link_to image_tag("pencil.jfif", size: "30"), edit_event_path(event) %></p>
              <% if signed_in? %>
              <% if event.added?(current_user) %>
-                <%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5", disabled: true %></p>
+                <p><%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5", disabled: true %></p>
             <% else %>
-                <%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5" %></p>
+                <p><%= button_to "+", add_path(event), method: "put", class:"btn btn-primary btn-sm mb-5" %></p>
             <% end %>
         <% end %>
           </div>
 
 
       </div>
+    
     </div>
     <% end %>
+</div>
 
-    <div class = "container pb-5">
-        <%= link_to 'New Event', new_event_path, class:"btn btn-secondary float-end" %>
-    </div> 
