--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -6,7 +6,15 @@
 
 
 <div class="container mt-3 p-5 my-5">
-<h1>Organizations</h1>
+<div class="row">
+        <div class="col">
+            <h1>Organizations</h1>
+            </div>    
+        <div class="col">
+            <%= link_to 'New Organization', new_organization_path, class:"btn btn-primary float-end ml-auto" %>
+            </div>
+        
+        </div>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
     
