--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,8 +13,8 @@
 
 .btn-secondary {
     color: #fff;
-    background-color: #f45291;
-    border-color: #f45291
+    background-color: #ff0054;
+    border-color: #ff0054
 
 }
 
@@ -22,8 +22,8 @@
     
     color: #fff;
     filter: brightness(0.9);
-    background-color: #f45291;
-    border-color: #f45291
+    background-color: #ff0054;
+    border-color: #ff0054
     
 }
 
