--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -8,7 +8,7 @@
 <div class="container mt-3 p-5 my-5">
 <div class="row">
         <div class="col">
-            <h1>Organizations</h1>
+            <h1 id="organizations-text">Organizations</h1>
             </div>    
         <div class="col">
             <%= link_to 'New Organization', new_organization_path, class:"btn btn-primary float-end ml-auto" %>
@@ -20,12 +20,11 @@
     
         <% @organizations.each do |organization| %>
         <div class="col">  
-        <div class="card h-100">
+        <div class="card h-100 border-primary">
           <h5 class="card-header"> <%= organization.name %> </h5>
           <%= image_tag "#{organization.image}", alt: "Photo of #{organization}", height:"200px", crop:"pad" =%>
           <div class="card-body">
-            <h4 class="card-title"> <%= organization.name %> </h4>
-            <p class="card-text"> <%= organization.category %> <td><%= link_to image_tag("eye.jfif", size: "30"), organization%></td> </p>
+            <p class="card-text" id="organizations-text"> <%= organization.category %> <td><%= link_to image_tag("eye.jfif", size: "30"), organization%></td> </p>
           </div>
         </div>
         </div>
