--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,8 +21,12 @@
 a {
   color: #000;
 
-  &button-nav-item {
-    color: #fff;
+  &.nav-item-primary {
+    color: #1d96fc;
+  }
+    
+  &.nav-item-secondary {
+    color: #ff0054;
   }
 
   &:hover {
